<resources>
    <string name="app_name">Bold and Brash</string>
    <string name="title">The Ventillator</string>
    <string name="ventButtonText">Vent!</string>

    <string name="redOption1">Record</string>
    <string name="redOption2">Text</string>

    <string name="redOption1_record">Start Recording</string>
    <string name="redOption1_stop">Stop Recording</string>
    <string name="redOption1_play">Play Recording</string>
    <string name="redOption1_submit">Submit Recording</string>

    <string name="redOption2_title">Write Down What You Want to Say!</string>
    <string name="redOption2_submit">Submit Text</string>

    <string name="blueOption_title">Cool-Down Questions:</string>
    <string name="blueOption_submit">Answer Question</string>
    <string name="blueOption_placeholder">Thank you for choosing Bold and Brash!</string>
    <string-array name="blueOption_coping_questions">
        <item>What are you angry/stressed about?</item>
        <item>What led up to this problem?</item>
        <item>What happened last time you vented? Did you face a similar problem?</item>
        <item>How do you feel now?</item>
        <item>How can reacting negatively affect those around you?</item>
        <item>What steps can you take to prevent problems in the future?</item>
    </string-array>
    <string name="title_activity_text">TextActivity</string>

</resources>
